map z-index fixed

--- a/src/map/index.css
+++ b/src/map/index.css
@@ -9,6 +9,12 @@ html, body {
   height: inherit;
   background-color: #000;
 }
+#map{
+  width: inherit;
+  height: inherit;
+  background-color: #000;
+  z-index : 0;
+}
 .filterUserLines {
   position: absolute;
   z-index: 10;
